cfail/ui/spsc_gt_one.stderr
error[E0080]: evaluation of `heapless::spsc::QueueInner::<u8, heapless::storage::OwnedStorage<1>>::new::{constant#0}` failed
 --> $HEAPLESS/src/spsc.rs
  |
  |         const { assert!(N > 1, "Queue size must be greater than 1") };
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Queue size must be greater than 1', /home/alex/git/heapless/src/spsc.rs:146:17
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
   --> $HEAPLESS/src/spsc.rs
    |
    |         const { assert!(N > 1, "Queue size must be greater than 1") };
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn heapless::spsc::QueueInner::<u8, heapless::storage::OwnedStorage<1>>::new`
 --> ui/spsc_gt_one.rs:4:27
  |
4 |     let _: Queue<u8, 1> = Queue::new();
  |                           ^^^^^^^^^^^^
